<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/drawer_border"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:background="@drawable/background_gradient">

        <ImageView
            android:layout_width="95dp"
            android:layout_height="92dp"
            android:scaleType="fitXY"
            android:src="@drawable/health_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/blueBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_info"
            android:text="@string/logged_in_user"
            android:textColor="@color/blueBlack"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueBlack"
            android:text="@string/home"
            android:textSize="20sp"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/home_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/all_incidents"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueBlack"
            android:text="@string/display_all_button"
            android:textSize="20sp"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/records" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueBlack"
            android:text="@string/about"
            android:textSize="20sp"
            android:drawablePadding="8dp"
            app:drawableLeftCompat="@drawable/about_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueBlack"
            android:text="@string/contact_us"
            android:textSize="20sp"
            android:drawablePadding="8dp"
            app:drawableLeftCompat="@drawable/contact_16" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/blueBlack"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_logout"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueBlack"
            android:id="@+id/login_logout_text"
            android:text="@string/logout"
            android:textSize="20sp"
            android:drawablePadding="8dp"
            app:drawableLeftCompat="@drawable/logout_16" />

    </LinearLayout>

</LinearLayout>